[package]
name = "vaiiya-security"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-cache-inmemory = "0.16.0"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

rusqlite = { version = "0.37.0", features = ["bundled"] }

tokio = { version = "1.47.1", default-features = false, features = ["macros", "signal", "rt-multi-thread"] }