[package]
name = "vaiiya-security"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = ["builder"] }
twilight-standby = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

rusqlite = { version = "0.37.0", features = ["bundled"] }

tokio = { version = "1.47.1", default-features = false, features = ["macros", "signal", "rt-multi-thread"] }