[package]
name = "vaiiya-security"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23.32" # For some stupid reason this code won't compile unless I have this UNUSED crate so that it does a build script with some stupid CryptoProvider

twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = ["rustls"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = ["native-tls"] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = ["builder"] }
twilight-standby = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

rusqlite = { version = "0.37.0", features = ["bundled"] }

tokio = { version = "1.47.1", default-features = false, features = ["macros", "signal", "rt-multi-thread"] }

[profile.dev.package."*"]
opt-level = 3