[package]
name = "embark_id_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
data = { path = "../data"}

async-trait = "0.1.89"
rustls = "0.23.32" # For some stupid reason this code won't compile unless I have this UNUSED crate so that it does a build script with some stupid CryptoProvider

twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", branch = "next", features = ["builder", "permission-calculator"] }
twilight-standby = { git = "https://github.com/twilight-rs/twilight.git", branch = "next" }

tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = [ "env-filter"]}
tracing-appender = "0.2"

rusqlite = { version = "0.37.0", features = ["bundled"] }

tokio = { version = "1.45.1", default-features = false }

[profile.dev.package."*"]
opt-level = 3
